# bexpect

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md  blang.y  setup.sh
blang/: blang.l  cmdfile.txt
blang/include/: blang.h
gtest/: CMakeLists.txt  blang_test.cpp  cmdfile.txt  tests.cpp
include/: bexpect.h  bsocket.h
source/: bexpect.cpp  bsocket.cpp
test/: client.cpp  server  server.cpp
